--- a/movie/templates/home.html
+++ b/movie/templates/home.html
@@ -2,9 +2,17 @@
 <html>
   <head>
     <title>Movies App</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-    <h1>Welcome to Home Page</h1>
-    <h2>This is the full home page</h2>
+    <div class="container">
+      <h1>Welcome to Home Page, {{ name }}</h1>
+      <h2>This is the full home page</h2>
+    </div>
   </body>
 </html>
