--- a/movie/templates/home.html
+++ b/movie/templates/home.html
@@ -11,8 +11,14 @@
   </head>
   <body>
     <div class="container">
-      <h1>Welcome to Home Page, {{ name }}</h1>
-      <h2>This is the full home page</h2>
+      <form action=""> <!-- "" submit the from to the same page -->
+        <div class="mb-3">
+          <label class="form-label">Search for Movie:</label>
+          <input type="text" name="searchMovie" class="form-control" />
+        </div>
+        <button type="submit" class="btn btn-primary">Search</button>
+      </form>
+      Searching for {{ search_Term }}
     </div>
   </body>
 </html>
