--- a/movie/templates/home.html
+++ b/movie/templates/home.html
@@ -11,7 +11,8 @@
   </head>
   <body>
     <div class="container">
-      <form action=""> <!-- "" submit the from to the same page -->
+      <form action="">
+        <!-- "" submit the from to the same page -->
         <div class="mb-3">
           <label class="form-label">Search for Movie:</label>
           <input type="text" name="searchMovie" class="form-control" />
@@ -19,6 +20,16 @@
         <button type="submit" class="btn btn-primary">Search</button>
       </form>
       Searching for {{ search_Term }}
+      <br />
+      <br />
+      <h2>Join our mailing list:</h2>
+      <form action="{% url 'signup' %}">
+        <div class="mb-3">
+          <label for="email" class="form-label"> Enter your email: </label>
+          <input type="email" class="form-control" name="email" />
+        </div>
+        <button type="submit" class="btn btn-primary">Sign Up</button>
+      </form>
     </div>
   </body>
 </html>
