Add a back link

--- a/movie/templates/signup.html
+++ b/movie/templates/signup.html
@@ -12,6 +12,7 @@ bootstrap@5.1.1/dist/css/bootstrap.min.css"
   <body>
     <div class="container">
       <h2>Added {{ email }} to mailing list</h2>
+      <a href="{% url 'home' %}">Home</a>
     </div>
   </body>
 </html>
