--- a/movie/templates/home.html
+++ b/movie/templates/home.html
@@ -19,7 +19,15 @@
         </div>
         <button type="submit" class="btn btn-primary">Search</button>
       </form>
-      Searching for {{ search_Term }}
+      <p>Searching for: {{ search_Term }}</p>
+      {% for movie in movies %}
+        <h2>{{ movie.title }}</h2>
+        <h3>{{ movie.description }}</h3>
+        <img src="{{ movie.image.url }}" />
+        {% if movie.url %}
+          <a href="{{ movie.url }}">Movie Link</a>
+        {% endif %} 
+      {% endfor %}
       <br />
       <br />
       <h2>Join our mailing list:</h2>
