--- a/moviereviews/templates/base.html
+++ b/moviereviews/templates/base.html
@@ -44,5 +44,25 @@ initial-scale=1"
       </div>
     </nav>
     <div class="container">{% block content %} {% endblock content %}</div>
+    <footer class="text-center text-lg-start bg-light text-muted mt-4">
+      <div class="text-center p-4">
+        © Copyright -
+        <a
+          class="text-reset fw-bold text-decoration-none"
+          target="_blank"
+          href="https://github.com/hamdiboyraz"
+        >
+          HAMDİ BOYRAZ
+        </a>
+        -
+        <a
+          class="text-reset fw-bold text-decoration-none"
+          target="_blank"
+          href="https://github.com/mt-tan"
+        >
+          MEHMET TAN
+        </a>
+      </div>
+    </footer>
   </body>
 </html>
