--- a/moviereviews/templates/base.html
+++ b/moviereviews/templates/base.html
@@ -46,8 +46,12 @@ initial-scale=1"
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
             <a class="nav-link" href="{% url 'news' %}">News</a>
+            {% if user.is_authenticated %}
+            <a class="nav-link" href="#"> Logout ({{ user.username }}) </a>
+            {% else %}
             <a class="nav-link" href="#">Login</a>
             <a class="nav-link" href="#">Sign Up</a>
+            {% endif %}
           </div>
         </div>
       </div>
