--- a/movie/templates/detail.html
+++ b/movie/templates/detail.html
@@ -31,7 +31,7 @@
             <p class="card-text">{{ review.text }}</p>
             {% if user.is_authenticated and user == review.user %}
             <a class="btn btn-primary me-2"
-              href="#">Update</a>
+            href="{% url 'updatereview' review.id %}">Update</a>
             <a class="btn btn-danger"
               href="#">Delete</a>
             {% endif %}
