Add url, function and link for deletereview

--- a/movie/templates/detail.html
+++ b/movie/templates/detail.html
@@ -33,7 +33,7 @@
             <a class="btn btn-primary me-2"
             href="{% url 'updatereview' review.id %}">Update</a>
             <a class="btn btn-danger"
-              href="#">Delete</a>
+            href="{% url 'deletereview' review.id %}">Delete</a>
             {% endif %}
           </li>
         {% endfor %}
